--- a/index.html
+++ b/index.html
@@ -2,10 +2,239 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
 </head>
 <body>
-    <h2>Sobre Nós</h2>
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+                        <span class="sr-only"> Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">TopCasaFina Arquitetura</a>
+                </div>
+                <div id="menu" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#sobre-nos">Sobre Nós</a></li>
+                        <li><a href="#nossos-projetos">Nossos Projetos</a></li>
+                        <li><a href="#depoimentos">Depoimentos</a></li>
+                        <li><a href="#video">Vídeo</a></li>
+                        <li><a href="#contato">Contato</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container topCasaFina-bannerWrapper">
+            <div class="topCasaFina-banner">
+                <h1>TopCasaFina Arquitetura</h1>
+                <p>Projetando a casa dos sonhos desde 2000 A.C.</p>
+                <button class="btn btn-primary btn-lg">Contate-nos agora</button>
+            </div>
+        </div>
+    </header>
 
+    <section id="sobre-nos"  class="container">
+        <h2>Sobre Nós</h2>
+        <div class="row">
+            <img class="img-responsive col-sm-6" src="img/empresa.jpg">
+            <div class="panel-group col-sm-6" id="paineis-sobre">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" data-toggle="collapse" data-parent="#paineis-sobre" data-target="#p1">Desde 1935</h3>
+                    </div>
+                    <div  id="p1" class="collapse">
+                        <div class="panel-body">
+                            <p>Desde 1935 trazendo casas, mansões e prédios lindos para o mundo</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3 class="panel-title" data-parent="#paineis-sobre" data-toggle="collapse" data-target="#p2">Preços acessíveis</h3></div>
+                    <div id="p2" class="collapse">
+                        <div class="panel-body"><p >Preços a partir de R$ 1000,00.</p></div>
+                    </div>
+
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading"><h3 class="panel-title" data-parent="#paineis-sobre" data-toggle="collapse" data-target="#p3">Alegria em colaborar para um mundo mais bonito</h3></div>
+                    <div id="p3" class="collapse">
+                        <div class="panel-body"><p >Trazendo alegria para a vida das pessoas que tem dinheiro para gastar.</p></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="jumbotron">
+        <div class="container">
+            <h3>Mais de 300 prêmios em design e em conforto.</h3>
+            <p>Mais de 5 milhões de clientes satisfeitos em todo o mundo.</p>
+        </div>
+    </div>
+    <section id="nossos-projetos"  class="container">
+        <h2>Nossos projetos</h2>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <figure class="thumbnail">
+                    <img src="img/projetos/casa-castelo.png" alt="Foto da CasaCastelo">
+                    <figcaption class="caption">
+                        <h3>Casa Castelo</h3>
+                        <p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <figure class="thumbnail">
+                    <img src="img/projetos/casa-lago.png" alt="Foto da CasaCastelo">
+                    <figcaption class="caption">
+                        <h3>Casa Lago</h3>
+                        <p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <figure class="thumbnail">
+                    <img src="img/projetos/mercado-marapira.png" alt="Foto da CasaCastelo">
+                    <figcaption class="caption">
+                        <h3>Mercado Marapira</h3>
+                        <p>O mercado Marapira foi projetado nos mínimos detalhes na arquitetura baseada em frutas.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <figure class="thumbnail">
+                    <img src="img/projetos/palacio-dionisio.png" alt="Foto da CasaCastelo">
+                    <figcaption class="caption">
+                        <h3>Palácio Dionísio</h3>
+                        <p>O palácio Dionísio foi eleito pela revista 'Grandes palácios' como o palácio mais lindo do mundo.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <figure class="thumbnail">
+                    <img src="img/projetos/residencia-ludi.png" alt="Foto da CasaCastelo">
+                    <figcaption class="caption">
+                        <h3>Residência Ludi</h3>
+                        <p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section id="depoimentos" >
+        <h2 class="container titulo-depoimentos">Depoimentos de clientes</h2>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="img/depoimentos/depoimento1.png" alt="">
+                    <div class="carousel-caption">
+                        <h3>Yuri padilha</h3>
+                        <p>Gostei muito e achei rápido o serviço.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/depoimentos/depoimento2.png" alt="">
+                    <div class="carousel-caption">
+                        <h3>Fernando Stafaneni</h3>
+                        <p>Excelente trabalho.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/depoimentos/depoimento3.png" alt="">
+                    <div class="carousel-caption">
+                        <h3>Caio Sauzas</h3>
+                        <p>Gostei, competência em primeiro lugar.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
+    <div class="container">
+        <div class="row">
+            <section id="video" class="col-sm-6">
+                <h2>Vídeo Institucional</h2>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item"  width="560" height="315" src="https://www.youtube.com/embed/i_3Pv1AygeI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </section>
+            <section id="contato" class="col-sm-6">
+                <h2>Contato</h2>
+                <p>Entre em contato conosco</p>
+                <form action="">
+                    <div class="form-group">
+                        <label for="contato-name">Nome:</label>
+                        <input class="form-control" id="contato-name" type="text" placeholder="Seu nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="contato-email">Email:</label>
+                        <div class="input-group">
+                            <div class="input-group-addon">@</div>
+                            <input class="form-control" id="contato-email" type="email" placeholder="Seu email">
+                        </div>
+                    </div>
+                    <div class="grupo-radio">
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="tipo-pessoa" checked>
+                                Pessoa Física
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="tipo-pessoa">
+                                Pessoa Jurídica
+                            </label>
+                        </div>
+                    </div><!--
+            --><select class="contato-select form-control">
+                    <option disabled selected>Tipo de situação</option>
+                    <option value="">Casa</option>
+                    <option value="">Apartamento</option>
+                    <option value="">Mansão</option>
+                </select>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
+            </section>
+        </div>
+    </div>
+
+    <footer>
+        <address>
+            <strong>TopCasaFina Arquitetura</strong><br>
+            Rua Vergueiro, 3185, Vila Mariana<br>
+            São Paulo, SP<br>
+            Tel: (11) 5571-2751 ou 5083-3884<br>
+        </address>
+        <address>
+            E-mail: contato.topcasafina@alura.com.br
+        </address>
+    </footer>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/navbar-animation-fix.js"></script>
 </body>
 </html>
